# minifftw

./: .gitignore  Makefile  README.md  extension.c  meson.build  meson_options.txt  minifftw.c  minifftw.h  plancapsule.c  setup-mpi.py  setup.py  util.c  util.h
clusters/lrz/: README.md  setup-lrz.py  setup.py
clusters/lrz/CoolMUC-2/: Makefile  setup.py
clusters/lrz/CoolMUC-2/examples/: one-node-test.cmd
doc/: mpi.md  mpi_performance.md
tests/: mpi_test.py  numpy_test.py  perf_test.py  sanity.py  test0.py  wisdom_test.py
